--- a/OtoServisSatis.WebUI/OtoServisSatis.WebUI.csproj
+++ b/OtoServisSatis.WebUI/OtoServisSatis.WebUI.csproj
@@ -7,17 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.13">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.10" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.9" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\OtoServisSatis.Data\OtoServisSatis.Data.csproj" />
-    <ProjectReference Include="..\OtoServisSatis.Entities\OtoServisSatis.Entities.csproj" />
-    <ProjectReference Include="..\OtoServisSatis.Servis\OtoServisSatis.Servis.csproj" />
+    <ProjectReference Include="..\OtoServisSatis.Service\OtoServisSatis.Service.csproj" />
   </ItemGroup>
 
   <ItemGroup>
