--- a/OtoServisSatis.WebUI/OtoServisSatis.WebUI.csproj
+++ b/OtoServisSatis.WebUI/OtoServisSatis.WebUI.csproj
@@ -7,7 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.13">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -16,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\OtoServisSatis.Service\OtoServisSatis.Service.csproj" />
+    <ProjectReference Include="..\OtoServisSatis.Servis\OtoServisSatis.Servis.csproj" />
   </ItemGroup>
 
   <ItemGroup>
