--- a/OtoServisSatis.WebUI/OtoServisSatis.WebUI.csproj
+++ b/OtoServisSatis.WebUI/OtoServisSatis.WebUI.csproj
@@ -11,11 +11,11 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.10" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.9" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\OtoServisSatis.Servis\OtoServisSatis.Servis.csproj" />
+    <ProjectReference Include="..\OtoServisSatis.Servis\OtoServisSatis.Service.csproj" />
   </ItemGroup>
 
   <ItemGroup>
